--- a/音乐2.1
+++ b/音乐2.1
@@ -87,7 +87,7 @@ local function CreateFullUI()
     -- ==================== 控制按钮美化 ====================
     local closeButton = Instance.new("TextButton")
     closeButton.Size = UDim2.new(0, 25, 0, 25)
-    closeButton.Position = UDim2.new(1, -30, 0.5, -12.5)
+    closeButton.Position = UDim2.new(1, -30, 0.5, -10)
     closeButton.AnchorPoint = Vector2.new(1, 0.5)
     closeButton.Text = "×"
     closeButton.Font = Enum.Font.GothamBold
@@ -104,9 +104,9 @@ local function CreateFullUI()
 
     local twinButton = Instance.new("TextButton")
     twinButton.Size = UDim2.new(0, 25, 0, 25)
-    twinButton.Position = UDim2.new(1, -65, 0.5, -12.5)
+    twinButton.Position = UDim2.new(1, -65, 0.5, -10)
     twinButton.AnchorPoint = Vector2.new(1, 0.5)
-    twinButton.Text = "T"
+    twinButton.Text = "M"
     twinButton.Font = Enum.Font.GothamBold
     twinButton.TextSize = 12
     twinButton.TextColor3 = Color3.fromRGB(255, 255, 255)
