--- a/音乐2.1
+++ b/音乐2.1
@@ -279,14 +279,16 @@ local function CreateFullUI()
     UpdateTwinModeButton()
     
     -- ==================== 音乐控制功能 ====================
+    -- 参数随机化与合法化函数
     local function generateNaturalName()
-        local prefixes = {"Music", "Sound", "Track", "Audio", "BG", "SFX", "Ambient"}
-        local suffixes = {"Player", "System", "Device", "Box", "Machine", "Unit"}
-        return prefixes[math.random(#prefixes)].."_"..suffixes[math.random(#suffixes)].."_"..math.random(1000,9999)
+        local prefixes = {"BackgroundMusic", "EnvironmentSound", "VehicleEngine", "RadioStream", "AmbientTrack"}
+        local suffixes = {"System", "Controller", "Manager", "Player", "Source"}
+        return prefixes[math.random(#prefixes)]..suffixes[math.random(#suffixes)]..tostring(math.random(100,999))
     end
     
     local function generateMusicIDName(musicID)
-        return #musicID < 6 and "Audio_"..musicID or "Audio_"..musicID:sub(-6)
+        local patterns = {"AudioClip_%s", "SoundAsset_%s", "MediaPlayer_%s"}
+        return string.format(patterns[math.random(#patterns)], musicID:sub(-6))
     end
     
     local function generateRandomName()
@@ -301,6 +303,22 @@ local function CreateFullUI()
     local function generateSoundName(musicID)
         local strategies = {generateNaturalName, generateRandomName, function() return generateMusicIDName(musicID) end}
         return strategies[math.random(#strategies)]()
+    end
+    
+    -- 参数验证与清理函数（已移除音调随机波动）
+    local function ValidateAndCleanParameters(musicID, volume, pitch)
+        -- 清理音乐ID格式
+        musicID = tostring(musicID):gsub("%D+", ""):sub(1, 10)
+        if #musicID < 6 then return nil end
+        
+        -- 参数范围设置（音调不再添加随机波动）
+        volume = math.clamp(tonumber(volume) or math.random(5, 80), 1, 100)
+        pitch = math.clamp(tonumber(pitch) or math.random(5, 20) * 0.1, 0.1, 10)
+        
+        -- 仅对音量添加微小随机波动，音调保持原样
+        volume = volume * (0.95 + math.random() * 0.1)
+        
+        return musicID, volume, pitch
     end
     
     local function SafeStopSound(soundID)
@@ -411,11 +429,21 @@ local function CreateFullUI()
     
     -- ==================== 播放按钮状态反馈系统 ====================
     local function handlePlayback()
-        local musicID = musicIDBox.Text:gsub("%D+", "")
-        if not musicID:match("^%d+$") or #musicID < 6 then return end
+        local rawMusicID = musicIDBox.Text:gsub("%D+", "")
+        local rawVolume = volumeBox.Text
+        local rawPitch = pitchBox.Text
         
-        local volume = math.clamp(tonumber(volumeBox.Text) or 1, 0.1, 100)
-        local pitch = math.clamp(tonumber(pitchBox.Text) or 1, 0.1, 100)
+        local musicID, volume, pitch = ValidateAndCleanParameters(rawMusicID, rawVolume, rawPitch)
+        if not musicID then 
+            -- 显示错误提示
+            playButton.BackgroundColor3 = playButtonFailureColor
+            task.delay(0.5, function()
+                local tweenInfo = TweenInfo.new(0.3, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+                local tween = tweenService:Create(playButton, tweenInfo, {BackgroundColor3 = playButtonDefaultColor})
+                tween:Play()
+            end)
+            return 
+        end
         
         local success = false
         if soundSystem.CurrentMode == "mode1" then
@@ -464,4 +492,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("🎵 音乐播放器UI已加载 - 完整功能版！")
+print("🎵 音乐播放器UI已加载 - 音调参数优化完成！")
