--- a/音乐2.1
+++ b/音乐2.1
@@ -305,24 +305,19 @@ local function CreateFullUI()
         return strategies[math.random(#strategies)]()
     end
     
-    -- 修复后的参数验证与清理函数
+    -- 修复后的参数验证与清理函数 - 核心修复
     local function ValidateAndCleanParameters(musicID, volume, pitch)
         -- 清理音乐ID格式：确保只保留数字
         musicID = tostring(musicID):gsub("%D+", "")
         
-        -- 关键修复：恢复严格的长度检查，不足6位直接返回nil
+        -- 关键修复：简化验证逻辑，只做最基本过滤
         if #musicID < 6 then
-            return nil
-        else
-            musicID = musicID:sub(1, 10)  -- 限制长度
+            return nil  -- 长度不足，返回nil触发错误提示
         end
         
-        -- 参数范围设置（使用原来的默认值：音量1，音调1）
-        volume = math.clamp(tonumber(volume) or 1, 0.1, 100)  -- 使用原来的默认值1
-        pitch = math.clamp(tonumber(pitch) or 1, 0.1, 10)     -- 使用原来的默认值1
-        
-        -- 仅对音量添加微小随机波动，音调保持原样
-        volume = volume * (0.95 + math.random() * 0.1)
+        -- 使用原始默认值（音量1，音调1）
+        volume = math.clamp(tonumber(volume) or 1, 0.1, 100)
+        pitch = math.clamp(tonumber(pitch) or 1, 0.1, 10)
         
         return musicID, volume, pitch
     end
@@ -375,7 +370,10 @@ local function CreateFullUI()
             end
         end
         
-        if not soundSystem.RemoteEvent then return false end
+        if not soundSystem.RemoteEvent then 
+            warn("[AC6播放器] 未找到AC6_FE_Sounds远程事件")
+            return false 
+        end
         
         local soundName = generateSoundName(musicID)
         local success = pcall(function()
@@ -407,7 +405,10 @@ local function CreateFullUI()
             end
         end
         
-        if #remoteEvents == 0 then return false end
+        if #remoteEvents == 0 then 
+            warn("[AC6播放器] 遍历模式：未找到任何AC6远程事件")
+            return false 
+        end
         
         for _, remote in ipairs(remoteEvents) do
             local success = pcall(function()
@@ -449,7 +450,7 @@ local function CreateFullUI()
                 local tween = tweenService:Create(playButton, tweenInfo, {BackgroundColor3 = playButtonDefaultColor})
                 tween:Play()
             end)
-            return -- 重要：直接退出函数，不尝试播放
+            return
         end
         
         local success = false
@@ -464,8 +465,10 @@ local function CreateFullUI()
         -- 播放按钮状态颜色反馈
         if success then
             playButton.BackgroundColor3 = playButtonSuccessColor
+            print("[AC6播放器] 音乐播放成功 - ID:", musicID)
         else
             playButton.BackgroundColor3 = playButtonFailureColor
+            warn("[AC6播放器] 音乐播放失败 - 请检查游戏是否支持AC6漏洞")
         end
         
         -- 0.5秒后恢复默认颜色
@@ -499,4 +502,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("🎵 音乐播放器UI已加载 - 参数验证修复完成，保留原始默认值！")
+print("🎵 AC6音乐播放器UI已加载 - 核心播放功能已修复！")
